prevent image squish

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -164,8 +164,9 @@ figure {
     }
 
     img, iframe {
-        max-width: 100%;
         width: auto;
+        height: auto;
+        max-width: 100%;
         max-height: inherit;
         filter: drop-shadow(0 0 0.1in transparentize(#575f66, 0.8));
     }
